--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="loading">Loading...</string>
+    <string name="widget_name">widget name</string>
+    <string name="widget_empty">Widget Empty</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="question_all_pages">Apakah digunakan untuk semua halaman?</string>
+    <string name="question_published">Apakah publised?</string>
+    <string name="save">Save</string>
+    <string name="title">Title</string>
+    <string name="option">Option</string>
+    <string name="message">Message</string>
 </resources>
